[package]
name = "rusty_seal"
version = "0.1.0"
edition = "2021"
description = "Binary signing and certificate management — Rusty Suite"
license = "MIT"

[[bin]]
name = "rusty_seal"
path = "src/main.rs"

[dependencies]
# GUI
eframe = { version = "0.29", default-features = true }
egui = "0.29"
rfd = "0.15"

# Cryptography — vault
aes-gcm = "0.10"
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
hmac = "0.12"

# Signing
ring = "0.17"

# Certificates
rcgen = { version = "0.13", features = ["pem"] }
time = { version = "0.3", features = ["std"] }
x509-parser = "0.16"
pem = "3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Compression
flate2 = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Filesystem
walkdir = "2.5"

# IDs
uuid = { version = "1.10", features = ["v4", "serde"] }

# Network (language download fallback)
ureq = "2.10"

# CSV export
csv = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
